// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MediaLibraryCard should match snapshot for draft image 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 100px;
  height: 240px;
  margin: 10px;
  border: solid 2px #dfdfe3;
  border-radius: 5px;
  cursor: pointer;
  overflow: hidden;
}

.emotion-0:focus {
  outline: none;
}

.emotion-2 {
  height: 162px;
  background-color: #f2f2f2;
  -webkit-background-size: 16px 16px;
  background-size: 16px 16px;
  -webkit-background-position: 0 0,8px 8px;
  background-position: 0 0,8px 8px;
  background-image: linear-gradient(
        45deg,
        #e6e6e6 25%,
        transparent 25%,
        transparent 75%,
        #e6e6e6 75%,
        #e6e6e6
      ),linear-gradient(
        45deg,
        #e6e6e6 25%,
        transparent 25%,
        transparent 75%,
        #e6e6e6 75%,
        #e6e6e6
      );
  box-shadow: inset 0 0 4px rgba(68, 74, 87, 0.3);
  border-bottom: solid 2px #dfdfe3;
  position: relative;
}

.emotion-4 {
  color: #70399f;
  background-color: #f6d8ff;
  position: absolute;
  padding: 8px;
  border-radius: 5px 0 5px 0;
}

.emotion-6 {
  width: 100%;
  height: 160px;
  object-fit: contain;
  border-radius: 2px 2px 0 0;
}

.emotion-8 {
  color: #798291;
  padding: 8px;
  margin-top: 20px;
  overflow-wrap: break-word;
  line-height: 1.3!important;
}

<div
    class="emotion-0 emotion-1"
    height="240px"
    tabindex="-1"
    width="100px"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <p
        class="emotion-4 emotion-5"
        data-testid="draft-text"
      >
        Draft
      </p>
      <img
        class="emotion-6 emotion-7"
        loading="lazy"
        src="url"
      />
    </div>
    <p
      class="emotion-8 emotion-9"
    >
      image.png
    </p>
  </div>
</DocumentFragment>
`;

exports[`MediaLibraryCard should match snapshot for non draft image 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 100px;
  height: 240px;
  margin: 10px;
  border: solid 2px #dfdfe3;
  border-radius: 5px;
  cursor: pointer;
  overflow: hidden;
}

.emotion-0:focus {
  outline: none;
}

.emotion-2 {
  height: 162px;
  background-color: #f2f2f2;
  -webkit-background-size: 16px 16px;
  background-size: 16px 16px;
  -webkit-background-position: 0 0,8px 8px;
  background-position: 0 0,8px 8px;
  background-image: linear-gradient(
        45deg,
        #e6e6e6 25%,
        transparent 25%,
        transparent 75%,
        #e6e6e6 75%,
        #e6e6e6
      ),linear-gradient(
        45deg,
        #e6e6e6 25%,
        transparent 25%,
        transparent 75%,
        #e6e6e6 75%,
        #e6e6e6
      );
  box-shadow: inset 0 0 4px rgba(68, 74, 87, 0.3);
  border-bottom: solid 2px #dfdfe3;
  position: relative;
}

.emotion-4 {
  width: 100%;
  height: 160px;
  object-fit: contain;
  border-radius: 2px 2px 0 0;
}

.emotion-6 {
  color: #798291;
  padding: 8px;
  margin-top: 20px;
  overflow-wrap: break-word;
  line-height: 1.3!important;
}

<div
    class="emotion-0 emotion-1"
    height="240px"
    tabindex="-1"
    width="100px"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <img
        class="emotion-4 emotion-5"
        loading="lazy"
        src="url"
      />
    </div>
    <p
      class="emotion-6 emotion-7"
    >
      image.png
    </p>
  </div>
</DocumentFragment>
`;

exports[`MediaLibraryCard should match snapshot for non viewable image 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 100px;
  height: 240px;
  margin: 10px;
  border: solid 2px #dfdfe3;
  border-radius: 5px;
  cursor: pointer;
  overflow: hidden;
}

.emotion-0:focus {
  outline: none;
}

.emotion-2 {
  height: 162px;
  background-color: #f2f2f2;
  -webkit-background-size: 16px 16px;
  background-size: 16px 16px;
  -webkit-background-position: 0 0,8px 8px;
  background-position: 0 0,8px 8px;
  background-image: linear-gradient(
        45deg,
        #e6e6e6 25%,
        transparent 25%,
        transparent 75%,
        #e6e6e6 75%,
        #e6e6e6
      ),linear-gradient(
        45deg,
        #e6e6e6 25%,
        transparent 25%,
        transparent 75%,
        #e6e6e6 75%,
        #e6e6e6
      );
  box-shadow: inset 0 0 4px rgba(68, 74, 87, 0.3);
  border-bottom: solid 2px #dfdfe3;
  position: relative;
}

.emotion-4 {
  width: 100%;
  height: 160px;
  object-fit: cover;
  border-radius: 2px 2px 0 0;
  padding: 1em;
  font-size: 3em;
}

.emotion-6 {
  color: #798291;
  padding: 8px;
  margin-top: 20px;
  overflow-wrap: break-word;
  line-height: 1.3!important;
}

<div
    class="emotion-0 emotion-1"
    height="240px"
    tabindex="-1"
    width="100px"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
        data-testid="card-file-icon"
      >
        Not Viewable
      </div>
    </div>
    <p
      class="emotion-6 emotion-7"
    >
      image.png
    </p>
  </div>
</DocumentFragment>
`;
